--- a/themes/inhabitent-theme/sass/_elements.scss
+++ b/themes/inhabitent-theme/sass/_elements.scss
@@ -78,3 +78,9 @@ body, button, input, select, textarea {
     font-size: 1rem;
     line-height: 1.75;
 }
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: Novocento Sans Web, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
