--- a/themes/inhabitent-theme/sass/_footer.scss
+++ b/themes/inhabitent-theme/sass/_footer.scss
@@ -5,7 +5,28 @@
     height: 350px;
 }
 .site-info {
+  font-family: Novovento Sans Web, sans-serif;
   text-transform: uppercase;
   text-align: center;
   color: white;
+}
+.overall-block {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 50px;
+}
+h3 {
+  color: #d99054;
+}
+.footer-logo {
+  max-width: 70%;
+}
+.contact-info {
+  a {
+    text-decoration: none;
+    color: white;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
