--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -365,6 +365,11 @@ body, button, input, select, textarea {
   font-size: 1rem;
   line-height: 1.75; }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: Novocento Sans Web, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px; }
+
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
@@ -788,6 +793,26 @@ img {
   height: 350px; }
 
 .site-info {
+  font-family: Novovento Sans Web, sans-serif;
   text-transform: uppercase;
   text-align: center;
   color: white; }
+
+.overall-block {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-top: 50px; }
+
+h3 {
+  color: #d99054; }
+
+.footer-logo {
+  max-width: 70%; }
+
+.contact-info a {
+  text-decoration: none;
+  color: white; }
+  .contact-info a:hover {
+    text-decoration: underline; }
