--- a/themes/inhabitent-theme/sass/_typography.scss
+++ b/themes/inhabitent-theme/sass/_typography.scss
@@ -17,6 +17,9 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
+	font-family: $font__pre;
+	text-transform: uppercase;
+	letter-spacing: 2px;
 }
 
 /* Copy */
