--- a/themes/inhabitent-theme/sass/_variables.scss
+++ b/themes/inhabitent-theme/sass/_variables.scss
@@ -17,12 +17,12 @@ $color__border-abbr: #666;
 
 $color__link: royalblue;
 $color__link-visited: purple;
-$color__link-hover: midnightblue;
+$color__link-hover: #248a83;
 
 // Typography
 
-$font__main: sans-serif;
+$font__main: "merriweather", serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-$font__pre: "Courier 10 Pitch", Courier, monospace;
-$font__line-height-body: 1.5;
+$font__pre: Novovento Sans Web, sans-serif;
+$font__line-height-body: 1.75;
 $font__line-height-pre: 1.6;
