finished adding adventure pictures and tried styling using flexbox

--- a/themes/inhabitent-theme/sass/layout/_footer.scss
+++ b/themes/inhabitent-theme/sass/layout/_footer.scss
@@ -9,9 +9,12 @@
   justify-content: space-around;
   padding-top: 50px;
 }
-h3 {
-  color: #d99054;
+.block{
+  h3 {
+    color: #d99054;
+  }
 }
+
 .contact-info {
   a {
     text-decoration: none;
