--- a/themes/inhabitent-theme/sass/pages/_front-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_front-page.scss
@@ -2,8 +2,7 @@
 /* Front page */
 
 .home .home-hero {
-  background: linear-gradient(180deg,rgba(0,0,0,.4)  0,rgba(0,0,0,.4)),
-              url(../../images/home-hero.jpg) no-repeat center;
+  background: linear-gradient(180deg,rgba(0,0,0,.4)  0,rgba(0,0,0,.4)), url(../../images/home-hero.jpg) no-repeat center;
   background-size: cover, cover;
   height: 750px;
   display: flex;
@@ -40,42 +39,76 @@
   ul {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   padding-left: 0;
   margin-left: 0;
   li {
     &:first-child {
-      border-right: 20px solid #fff;
-      flex: 0 1 25%;
+      margin-right: 1%;
+      flex: 0 1 49%;
     }
     &:nth-child(2) {
-      flex: 0 1 25%;
+      flex: 0 1 49%;
     }
     &:nth-child(3) {
-      flex: 0 1 12.5%;
+      flex: 0 1 24%;
+      // margin-left: 2%;
+      margin-top: 0.5%;
     }
     &:last-child {
-      flex: 0 1 12.5%;
+      flex: 0 1 24%;
+      margin-left: 1%;
+      margin-top: 0.5%;
     }
   }
   }
 }
+.canoe {
+  background:
+  linear-gradient(
+  rgba(0, 0, 0, 0.25),
+  rgba(0, 0, 0, 0.25)
+  ),
+  url(../../images/adventure/canoe-girl.jpg) no-repeat center center;
+  background-size: cover, cover;
+  height: 600px;
+}
+.bonfire {
+  background:
+  linear-gradient(
+  rgba(0, 0, 0, 0.25),
+  rgba(0, 0, 0, 0.25)
+  ),
+  url(../../images/adventure/beach-bonfire.jpg) no-repeat center center;
+  background-size: cover, cover;
+  height: 300px;
+}
+.hikers {
+  background:
+  linear-gradient(
+  rgba(0, 0, 0, 0.25),
+  rgba(0, 0, 0, 0.25)
+  ),
+  url(../../images/adventure/mountain-hikers.jpg) no-repeat center center;
+  background-size: cover, cover;
+  height: 300px;
+}
+.night-sky {
+  background:
+  linear-gradient(
+  rgba(0, 0, 0, 0.25),
+  rgba(0, 0, 0, 0.25)
+  ),
+  url(../../images/adventure/night-sky.jpg) no-repeat center center;
+  background-size: cover, cover;
+  height: 300px;
+}
 .story-wrap {
   position: relative;
-  &:after {
-    background: rgba(0,0,0,.35);
-    position: absolute;
-    height: 100%;
-  }
-  img {
-    max-width: none;
-    max-height: 620px;
-    width: auto;
-
-  }
   .story-info {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 20px;
   }
 }
 .readtag {
@@ -88,7 +121,11 @@
   &:hover {
     background-color: $color__link-hover;
     color: white;
-    border: 0;
+    border: 1px solid $color__link-hover;
+    outline: 0;
+  }
+  &:active {
+    outline: 0;
   }
   &:visited {
     color: black;
@@ -97,6 +134,7 @@
     }
   }
 }
+
 .more-adventures {
   padding: 12.5px 25px;
   font-family: $font__pre;
