--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -721,11 +721,105 @@ a {
   display: none; }
 
 /* Comments */
+.comments-title {
+  line-height: 1.25;
+  font-size: 2rem;
+  color: #2f1339; }
+
 .comment-content a {
   word-wrap: break-word; }
 
 .bypostauthor {
   display: block; }
+
+.comment {
+  padding-top: 10px; }
+
+.comment-list li {
+  border-bottom: 1px solid #e1e1e1; }
+
+.children li {
+  border-top: 1px solid #e1e1e1; }
+
+.comment-body {
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 25px; }
+
+.comment-author-avatar {
+  border-radius: 50%;
+  height: 64px;
+  width: 64px;
+  overflow: hidden;
+  margin-right: 1.5rem; }
+
+a {
+  text-decoration: none;
+  color: #248a83; }
+  a:hover {
+    color: #2f1339; }
+  a:visited {
+    color: #248a83; }
+    a:visited:hover {
+      color: #2f1339; }
+
+.comment-reply-title {
+  font-size: 1.8rem;
+  line-height: 1.25; }
+
+input[type=email], input[type=password], input[type=search], input[type=text], input[type=url], textarea {
+  color: #666666;
+  background-color: #f4f4f4;
+  border: 1px solid #e1e1e1;
+  border-radius: 0; }
+
+.comment-form-author {
+  margin-right: 1%;
+  width: 49%; }
+  .comment-form-author input {
+    width: 100%; }
+
+.comment-form-email {
+  margin-right: 1%;
+  width: 49%; }
+  .comment-form-email input {
+    width: 100%; }
+
+.comment-form-url {
+  clear: left;
+  width: 100%; }
+  .comment-form-url input {
+    width: 100%; }
+
+.required {
+  color: #d99054; }
+
+.comment-form-author, .comment-form-email {
+  float: left; }
+
+label {
+  text-transform: uppercase;
+  font-family: Novovento Sans Web, sans-serif;
+  font-size: 1.1rem; }
+
+input[type=submit] {
+  padding: 12.5px 25px;
+  font-family: Novovento Sans Web, sans-serif;
+  text-transform: uppercase;
+  color: white;
+  font-size: 0.9rem;
+  background-color: #248a83;
+  border-radius: 0;
+  box-shadow: none;
+  text-shadow: none; }
+  input[type=submit]:hover {
+    background-color: #19625d;
+    color: white;
+    box-shadow: none; }
+  input[type=submit]:visited {
+    color: white; }
+    input[type=submit]:visited:hover {
+      color: white; }
 
 .site-footer {
   background: url(../../images/dark-wood.png);
