added social buttons to single journal post, removed navigation from each post

--- a/themes/inhabitent-theme/sass/layout/_navigation.scss
+++ b/themes/inhabitent-theme/sass/layout/_navigation.scss
@@ -121,11 +121,13 @@ a {
 	.nav-previous {
 		float: left;
 		width: 50%;
+		display: none;
 	}
 
 	.nav-next {
 		float: right;
 		text-align: right;
 		width: 50%;
+		display: none;
 	}
 }
