--- a/themes/inhabitent-theme/sass/style.scss
+++ b/themes/inhabitent-theme/sass/style.scss
@@ -60,6 +60,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 // Layout
 @import "layout/header";
 @import "layout/forms";
+@import "layout/comments";
 @import "layout/navigation";
 @import "layout/modules";
 @import "layout/widgets";
