--- a/themes/inhabitent-theme/sass/pages/_journal-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_journal-page.scss
@@ -60,7 +60,7 @@ img {
   &:hover {
     background-color: $color__link-hover;
     color: white;
-    border: 0;
+    border: 1px solid $color__link-hover;
   }
   &:visited {
     color: black;
@@ -72,6 +72,14 @@ img {
 .readmore a {
   text-decoration: none;
 }
-.hentry {
-    margin: 0 0 4.5rem;
+
+.entry-content {
+  span {
+    line-height: 1.5;
+  }
+}
+.social-buttons button {
+  background: transparent;
+  padding: 5px 30px;
+  margin-top: 30px;
 }
