--- a/themes/inhabitent-theme/sass/pages/_journal-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_journal-page.scss
@@ -16,7 +16,7 @@
     padding-top: 3rem;
     padding-bottom: 3rem;
     width: 73%;
-    margin-left: 30px;
+    margin-left: 150px;
 }
 .entry-header {
   position: relative;
@@ -74,6 +74,7 @@ img {
 }
 
 .entry-content {
+  margin-bottom:80px;
   span {
     line-height: 1.5;
   }
